--- a/test/GildedRose.Tests/GildedRose.Tests.csproj
+++ b/test/GildedRose.Tests/GildedRose.Tests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GildedRose.Console\GildedRose.Console.csproj" />
+    <ProjectReference Include="..\..\src\GildedRose.Console\GildedRose.Console.csproj" />
   </ItemGroup>
 
 </Project>
